testsuite/tests/indexed-types/should_fail/T9357.stderr
T9357.hs:13:15: error: [GHC-91510]
    • Illegal polymorphic type: forall (a :: TYPE t). a -> a
    • In the type family instance declaration for ‘F’

